Implemented sorting in descending and ascending order of strings and numbers